[package]
name = "geofabrik-catenary-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
osmpbf = "0.3.4"
reqwest = "0.12.5"
tokio = { version = "1.39.2", features = ["full"] }
geo = "0.28.0"
geojson = "0.24.1"
pest = "2.7.11"
pest_derive = "2.7.11"


[[bin]]
name = "download_osms_and_reduce_to_rail_lines"
path = "src/dl_and_reduce.rs"
